avanzando con el proyecto

--- a/index.html
+++ b/index.html
@@ -76,23 +76,33 @@
       <section class="lugares">
         <div class="iniciocard">
           <img src="imagenes/cuzco-peru.jpg" alt="experiencia">
-          <h3>Cuzco,Perú</h3>
+          <h3>Cuzco,Perú $0000 desde Buenos Aires</h3>
           <p>Nos avala una importante cantidad de clientes nacionales e internacionales, para los cuales trabajamos soluciones web de todo tipo en los rubros más variados. Nuestro principal objetivo como empresa es lograr su recomendación hacia nuevos posibles clientes.</p>
         </div>
         <div class="iniciocard">
           <img src="imagenes/san-andres-colombia.jpg" alt="tecnologia">
-          <h3>San Andrés,Colombia</h3>
+          <h3>San Andrés,Colombia $0000 desde Buenos Aires</h3>
           <p>Trabajamos con las más modernas y eficientes tecnologías para que su diseño web se destaque del resto, en visual y funcionalidad. Tome la delantera y adelántese a sus competidores con una moderna página web adaptable a celulares y tablets.</p>
         </div>
         <div class="iniciocard">
           <img src="imagenes/roma-italia.jpg" alt="marketing">
-          <h3>Roma,Italia</h3>
+          <h3>Roma,Italia $0000 desde Buenos Aires</h3>
           <p>Hacemos especial foco en los aspectos comerciales y de marketing, para que su estrategia en internet sea efectiva. Desde el diseño, la comunicación y la publicidad, comprendemos que el objetivo de su web es contribuir al crecimiento de su negocio.</p>
         </div>
         <div class="iniciocard">
           <img src="imagenes/nassau-bahamas.jpg" alt="flexibilidad">
-          <h3>Nasáu,Bahamas</h3>
+          <h3>Nasáu,Bahamas $0000 desde Buenos Aires</h3>
           <p>Utilizamos una arquitectura poderosa y flexible que hace posible incorporar nuevas características, a medida que sun negocio lo requiera. Desarrollamos soluciones a medida que permiten un resultado flexible y eficientemente ligado a las necesidades puntuales de su empresa.</p>
+        </div>
+      </section>
+
+      <section class="previaje">
+        <img src="/imagenes/previaje.jpg" alt="previaje" class="previaje__img"> <!-- IMAGEN PREVIAJE-->
+    
+        <div class="previaje__txt">
+          <h3>VUELOS POR ARGENTINA</h3>
+          <p>¡Aprovecha el reintegro del 50% del precio del vuelo para gastar en el viaje!</p>
+          <button class="button1"><a href="https://previaje.gob.ar/" target="_blank">Informate aca!</a></button>
         </div>
       </section>
 
@@ -113,11 +123,7 @@
             </div>
           </form>
         </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+        
     <!-- FOOTER -->
     <footer class="footer">
         <div class="aboutus">
@@ -153,7 +159,7 @@
                 </li>
                 <li>
                     <span><i class="gg-mail"></i></span>
-                    <span><a href="mailto:digitalsolutions@gmail.com">digitalsolutions@gmail.com</a></span> 
+                    <span><a href="mailto:digitalsolutions@gmail.com">nuevorumbo@gmail.com</a></span> 
                 </li>
             </ul>
         </div>
